--- a/Projet/Projet/Projet.vcxproj
+++ b/Projet/Projet/Projet.vcxproj
@@ -138,11 +138,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="date.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="todo.cpp" />
     <ClCompile Include="todoList.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="date.h" />
     <ClInclude Include="todo.h" />
     <ClInclude Include="todoList.h" />
   </ItemGroup>
