--- a/Projet/Projet/Projet.vcxproj.filters
+++ b/Projet/Projet/Projet.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="date.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="category.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
